--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,29 @@
 *.class
-.directory
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
 
 # Package Files #
+*.jar
 *.war
 *.ear
+.directory
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+
+.gradle/
+build/
+bin/
+
+# Ignore Gradle GUI config
+gradle-app.setting
+
+# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+!gradle-wrapper.jar
+
+# Cache of project
+.gradletasknamecache
+
+# # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
+# gradle/wrapper/gradle-wrapper.properties
