--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,9 @@ ext.current_Date = getDate()
 
 // Jar creation
 jar {
+	from {
+            configurations.extraLibs.collect { it.isDirectory() ? it : zipTree(it) }
+        }
     manifest {
         attributes 'Created-By': System.getProperty('java.version') + ' (' + System.getProperty('java.vendor') + ')',
                    "Specification-Title"    : "Kariminf Information Miner",
@@ -58,13 +61,20 @@ repositories {
     jcenter()
 }
 
+configurations {
+    // configuration that holds jars to include in the jar
+    extraLibs
+}
+
 dependencies {
     // The production code uses the SLF4J logging API at compile time
     compile 'org.slf4j:slf4j-api:1.7.21'
     
-    compile files('lib/sqlitejdbc-v056.jar')
+    extraLibs files('lib/sqlitejdbc-v056.jar')
 
     testCompile 'junit:junit:4.12'
+    
+    configurations.compile.extendsFrom(configurations.extraLibs)
 }
 
 javadoc {    
